--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "use-query-params": "^2.1.1",
