--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.0",
+    "@use-it/event-listener": "^0.1.7",
     "bootstrap": "^5.2.2",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
